<resources>
    <string name="app_name">COVID-19 Tracker</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="total_cases">Total Cases</string>
    <string name="recovered">Recovered</string>
    <string name="deaths">Deaths</string>
    <string name="active">Active</string>


    <string name="global">Global Stats</string>
    <string name="today_cases">Today Cases</string>
    <string name="critical">Critical</string>
    <string name="total_deaths">Total Deaths</string>
    <string name="today_deaths">Today Deaths</string>
    <string name="affected_countries">Affected Countries</string>
    <string name="Country">Country</string>
    <string name="tests">Total Tests</string>

    <string name="search">Search</string>

    <string name="contactVia">Contact Via</string>
    <string name="gmail">Gmail</string>
    <string name="linkedin">LinkedIn</string>
    <string name="facebook">Facebook</string>
    <string name="github">Github</string>

    <string name="about_des">
        Overall coronavirus defection statistics around the world.
Tracking the number of confirmed cases, recovered patients, tests,
and the death toll due to the COVID-19 coronavirus.
Country specific coronavirus defection statistics.
    </string>

    <string name="dev_des">
        System Architecture and Application developed by "Subroto Basak Shawon".
    </string>
</resources>
