<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.About">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="50dp">

        <LinearLayout
            android:id="@+id/layout_active_cases"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#DADADA"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="5dp"
                android:orientation="vertical"
                android:paddingBottom="5dp"
                app:cardCornerRadius="5dp"
                app:cardElevation="3dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:padding="10dp"
                            android:text="Corona Virus Stats"
                            android:textSize="15sp" />

                    </LinearLayout>


                </LinearLayout>


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="5dp"
                android:orientation="vertical"
                android:paddingBottom="5dp"
                app:cardCornerRadius="5dp"
                app:cardElevation="3dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:padding="10dp"
                            android:text="Contact Via"
                            android:textSize="15sp" />


                    </LinearLayout>


                </LinearLayout>


            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="5dp"
                    android:orientation="vertical"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="3dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/gmailButtonID"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:padding="10dp"
                            android:text="@string/gmail"
                            android:textSize="15sp" />


                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="5dp"
                    android:orientation="vertical"
                    android:paddingBottom="5dp"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="3dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/linkedInButtonID"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:padding="10dp"
                            android:text="@string/linkedin"
                            android:textSize="15sp" />


                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="5dp"
                    android:orientation="vertical"
                    android:paddingBottom="5dp"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="3dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/facebookButtonId"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:padding="10dp"
                            android:text="@string/facebook"
                            android:textSize="15sp" />


                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="5dp"
                    android:orientation="vertical"
                    android:paddingBottom="5dp"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="3dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/githubButtonId"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:padding="10dp"
                            android:text="@string/github"
                            android:textSize="15sp" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>


            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="5dp"
                android:orientation="vertical"
                android:paddingBottom="5dp"
                app:cardCornerRadius="5dp"
                app:cardElevation="3dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/dev_des"
                        android:textSize="15sp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/colorPrimary" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/about_des"
                        android:textSize="15sp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="250dp"

                android:src="@drawable/corona_safety" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>





